# candidate_application_tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
candidate_application_tracker/: hooks.py  install.py  modules.txt  permissions.py
candidate_application_tracker/api/: tracker.py
candidate_application_tracker/www/my-applications/: details.html  details.py  index.html  index.py
