[project]
name = "candidate_application_tracker"
authors = [
    { name = "Stephen Olayemi", email = "olayemistephen007@gmail.com" }
]
description = "Portal for candidates to track their job applications on Frappe HRMS"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"
